[gd_scene load_steps=34 format=3 uid="uid://xxtuh4ovapvg"]

[ext_resource type="Texture2D" uid="uid://cfrqyb6nlhr8s" path="res://art/characters/slime.png" id="1_dhjr6"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_ja2qj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c03gn"]
atlas = ExtResource("1_dhjr6")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtnoe"]
atlas = ExtResource("1_dhjr6")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85hvb"]
atlas = ExtResource("1_dhjr6")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3kyq"]
atlas = ExtResource("1_dhjr6")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crdft"]
atlas = ExtResource("1_dhjr6")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeomg"]
atlas = ExtResource("1_dhjr6")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_278ir"]
atlas = ExtResource("1_dhjr6")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwly7"]
atlas = ExtResource("1_dhjr6")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e5fv"]
atlas = ExtResource("1_dhjr6")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77pc1"]
atlas = ExtResource("1_dhjr6")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh6jr"]
atlas = ExtResource("1_dhjr6")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdtfa"]
atlas = ExtResource("1_dhjr6")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_osqk5"]
atlas = ExtResource("1_dhjr6")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmp48"]
atlas = ExtResource("1_dhjr6")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar7n5"]
atlas = ExtResource("1_dhjr6")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf2dp"]
atlas = ExtResource("1_dhjr6")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kopl3"]
atlas = ExtResource("1_dhjr6")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21lw0"]
atlas = ExtResource("1_dhjr6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8tme"]
atlas = ExtResource("1_dhjr6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_giat5"]
atlas = ExtResource("1_dhjr6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mwly"]
atlas = ExtResource("1_dhjr6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y41a"]
atlas = ExtResource("1_dhjr6")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f6ch"]
atlas = ExtResource("1_dhjr6")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vb04"]
atlas = ExtResource("1_dhjr6")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6q3y4"]
atlas = ExtResource("1_dhjr6")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0teqj"]
atlas = ExtResource("1_dhjr6")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k85t"]
atlas = ExtResource("1_dhjr6")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nk1eu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c03gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtnoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85hvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3kyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crdft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeomg")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_278ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwly7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e5fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77pc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh6jr")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdtfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osqk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmp48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar7n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf2dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kopl3")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_21lw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8tme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giat5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mwly")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y41a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f6ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vb04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6q3y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0teqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k85t")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fgrmj"]
radius = 54.0093

[sub_resource type="CircleShape2D" id="CircleShape2D_6t1l6"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ba5cf"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ja2qj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_nk1eu")
animation = &"idle"

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_fgrmj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_6t1l6")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_ba5cf")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="demage_shader" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="demage_shader" to="." method="_on_demage_shader_timeout"]
